Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-5878

Skip start transaction failure handling (sqlite) unit test

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 2.0-beta
    • None
    • couchbase-bucket
    • Security Level: Public
    • None

    Description

      Running [0223/0369]: start transaction failure handling (sqlite)...engine_testapp: ep_testsuite.cc:1857: void bug_2830_child(int, int): Assertion `pst.execute() >= 0' failed.
      TIMED OUT

      This test fails sporadically on ubuntu only and since we are no longer supporting sqlite as a backend we should just skip this test case.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mikew Mike Wiederhold [X] (Inactive)
            mikew Mike Wiederhold [X] (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty