MB-5878: Skip start transaction failure handling (sqlite) test

This test case only runs against sqlite and fails sporadically
on ubuntu. Since we arent supporting sqlite anymore lets just
skip this test.

Change-Id: I96e0a4d1352d684afb79ee3473a490e5ae55f548
Reviewed-on: http://review.couchbase.org/18278
Reviewed-by: Chiyoung Seo <chiyoung.seo@gmail.com>
Tested-by: Michael Wiederhold <mike@couchbase.com>